anothergithubapp/another-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: another-github-app
  namespace: ns-bsbm-o-sre-playground
  labels:
    app: another-github-app
spec:
  replicas: 3
  selector: #required for a ReplicaSet (but not for the older ReplicationController)
    matchLabels:
      app: another-github-app
      type: nginx-pod
  template: 
    #pod definition 
    metadata:
      labels:
        app: another-github-app
        type: nginx-pod
    spec:
      containers:
      - name: nginx
        image: nginxinc/nginx-unprivileged:stable-bookworm-perl
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume-nginx2
          mountPath: /usr/share/nginx/html

      volumes:
      - name: config-volume-nginx2
        configMap:
          name: index-html-configmap3
