anothergithubapp/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-server-ingress-github
  namespace: ns-bsbm-o-sre-playground
  annotations:
    route.openshift.io/termination: edge
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: openshift-default
  rules:
  - host: nginx-service2.apps.ns-bsbm-o.ceap.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: another-service-github
            port:
              number: 8081
